# openmarket-ai

./: .env.example  .gitignore  Dockerfile  README.md  deployed-abi.json  deployed-address.txt  docker-compose.yml  ecosystem.config.cjs  hardhat.config.cjs  middleware.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/.well-known/agent-card.json/: route.ts
app/.well-known/openmarket.json/: route.ts
app/agents.txt/: route.ts
app/api/v1/agents/: route.ts
app/api/v1/agents/[id]/: route.ts
app/api/v1/agents/[id]/reputation/: route.ts
app/api/v1/agents/[id]/stats/: route.ts
app/api/v1/agents/me/: route.ts
app/api/v1/agents/register/: route.ts
app/api/v1/buy/: route.ts
app/api/v1/dashboard/: route.ts
app/api/v1/demo/fulfill/: route.ts
app/api/v1/escrow/: route.ts
app/api/v1/escrow/[id]/: route.ts
app/api/v1/escrow/[id]/dispute/: route.ts
app/api/v1/escrow/[id]/refund/: route.ts
app/api/v1/escrow/[id]/release/: route.ts
app/api/v1/escrow/[id]/resolve/: route.ts
app/api/v1/escrow/expire/: route.ts
app/api/v1/escrow/onchain/: route.ts
app/api/v1/health/: route.ts
app/api/v1/mcp/: route.ts
app/api/v1/me/: route.ts
app/api/v1/metrics/: route.ts
app/api/v1/offers/: route.ts
app/api/v1/offers/[id]/: route.ts
app/api/v1/offers/search/: route.ts
app/api/v1/orders/: route.ts
app/api/v1/orders/[id]/: route.ts
app/api/v1/orders/[id]/pay/: route.ts
app/api/v1/quotes/: route.ts
app/api/v1/ready/: route.ts
app/api/v1/settlement/check/: route.ts
app/api/v1/stats/: route.ts
app/catalog/: page.tsx
app/dashboard/: route.ts
app/how-it-works/: page.tsx
app/llms.txt/: route.ts
app/openapi.json/: route.ts
app/privacy/: page.tsx
app/robots.txt/: route.ts
app/sitemap.xml/: route.ts
app/terms/: page.tsx
contracts/: OpenMarketEscrow.sol  README.md
deploy/: nginx.openmarket.conf  vps-start.sh
docs/: AGENT-SPEC.md  CHANGELOG.md  DEPLOY.md  EVENING-HANDOFF.md  EXECUTION-PLAN.md  FOUNDATION-1.0.md  GROWTH-PLAN.md  LAUNCH-KIT.md  ONCHAIN-ESCROW.md  POSTGRES.md  PRODUCTION.md  PUBLIC.md  SECURITY-AUDIT-2026-07-24.md  SETTLEMENT.md  TEST-REPORT.md  VISION.md  schema.sql
examples/agent-buyer-py/: main.py
examples/agent-buyer-ts/: index.ts
examples/agent-seller-ts/: index.ts
examples/webhook-seller/: README.md  server.mjs
lib/: agent-client.ts  assets.ts  config.ts  demo-webhook-offer.ts  hcs-audit.ts  http.ts  llm.ts  onchain-escrow-live.ts  onchain-escrow.ts  pg-state.ts  pg-store.ts  policy.ts  production-check.ts  public-dto.ts  ranking.ts  rate-limit.ts  reputation.ts  seed-agents.ts  settlement.ts  ssrf.ts  store-types.ts  store.ts  tx-id.ts  types.ts  webhook-fulfillment.ts  webhooks.ts
public/: .gitkeep
scripts/: backup.sh  cron-expire.sh  demo-buyer.ts  demo-seller.ts  deploy-escrow-notes.js  deploy-escrow.ts  e2e-escrow-lifecycle.ts  e2e-escrow.ts  e2e-expire.ts  e2e-usdc.ts  live-probe.sh  smoke-local.ts  unit-settlement.ts  uptime-check.sh
sdk/: README.md  index.ts
sdk/autogen/: README.md  pyproject.toml
sdk/autogen/openmarket_autogen/: __init__.py
sdk/autogen/openmarket_autogen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/crewai/: README.md  pyproject.toml
sdk/crewai/openmarket_crewai/: __init__.py
sdk/crewai/openmarket_crewai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/langchain/: package.json
sdk/langchain/src/: index.ts  tools.ts
sdk/mcp-server/: README.md  package-lock.json  package.json
sdk/mcp-server/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/openmarket/: __init__.py  cli.py
sdk/python/openmarket_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sdk/ts/: README.md  package-lock.json  package.json
sdk/ts/src/: index.ts
sdk/ts/test/: integration.ts
test/: escrow-contract.test.js
tests/: unit-policy.test.ts  unit-settlement.test.ts  unit-ssrf.test.ts
