[project]
name = "openmarket-autogen"
version = "1.0.0"
description = "OpenMarket.ai tools for Microsoft AutoGen / AG2 agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenMarket.ai" }]
keywords = ["openmarket", "autogen", "ag2", "ai", "agents", "hedera", "marketplace"]
dependencies = [
  "openmarket>=1.0.0",
]

[project.optional-dependencies]
autogen = ["autogen-agentchat>=0.4.0"]

[project.urls]
Homepage = "https://openmarket-ai.187-55-228-127.sslip.io"
Repository = "https://github.com/adamfreeman2024-eng/openmarket-ai"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openmarket_autogen*"]
