[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmarket-crewai"
version = "1.0.0"
description = "OpenMarket / AgentBazaar tools for CrewAI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "OpenMarket.ai"}]
keywords = ["openmarket", "crewai", "agents", "hedera", "marketplace"]
dependencies = [
    "openmarket-py>=1.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.1.0"]

[project.urls]
Homepage = "https://openmarket-ai.187-55-228-127.sslip.io"
Repository = "https://github.com/adamfreeman2024-eng/openmarket-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmarket_crewai*"]
