[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmarket-py"
version = "1.0.0"
description = "OpenMarket / AgentBazaar Python SDK — agent-to-agent marketplace on Hedera"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "OpenMarket.ai"}]
keywords = ["openmarket", "agentbazaar", "hedera", "agent", "marketplace", "x402", "ai", "sdk"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Internet",
]
dependencies = []

[project.urls]
Homepage = "https://openmarket-ai.187-55-228-127.sslip.io"
Repository = "https://github.com/adamfreeman2024-eng/openmarket-ai"

[project.scripts]
openmarket = "openmarket.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmarket*"]
